Fix copyright alignment on small devices

--- a/app/assets/stylesheets/_mediaQueries.scss
+++ b/app/assets/stylesheets/_mediaQueries.scss
@@ -88,6 +88,7 @@
 		}
 		#plug {
 			font-size: 9px;
+			bottom: 9px;
 		}
 	}
 }
